containerized the setup with docker compose and MSH for server auto shutdown